k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-card-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: credit-card.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: credit-card-service
                port:
                  number: 8080
